2011-11-16  Ruediger Haertel <r_haertel@gmx.de>

	* pkgIndex.tcl: Bumped package version to 1.00.
	* widget_calendar.tcl: 
	* calendar.tcl: - Update -textvariable and call -command when
                          navigated by keyboard.
                        - Refactored code so that mouse button select
                          and keyboard navigation use the same code
                        - Added key binding for the Home key.

2011-11-16  Andreas Kupries  <andreask@activestate.com>

	* dateentry.tcl: Added option -language, using the patch provided
	* pkgIndex.tcl: by J. Lewandowski <j.lewandowski@gazeta.pl>. Bumped
	  package version to 0.94.

2011-10-31  Andreas Kupries  <andreask@activestate.com>

	* calendar.tcl (C-language): Extended to include 'pl' (Polish) as
	* pkgIndex.tcl: viable language, per J. Lewandowski. Bumped
	* widget_calendar.man: version to 0.98.

2011-09-12  Andreas Kupries  <andreask@activestate.com>

	* calendar.tcl: Added polish language definitions sent in
	* pkgIndex.tcl: by J. Lewandowski. Bumped version to 0.97.
	* widget_calendar.man: 

2010-09-30  Ruediger Haertel <r_haertel@gmx.de>

	* calendar.tcl: allow a -textvariable also from the dateentry
                         namespace. This was a misconception from their
                         beginning.
	* pkgIndex.tcl: bump calendar to v0.96

2010-09-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl:  Bump dateentry to 0.93
	* dateentry.tcl: address aqua issues causing selection not to
	work, following ttk::combobox.  Do grab/release on popdown
	Map/Unmap and focus on calendar Map.  Set wm transient/group only
	on non-aqua wms.

2010-07-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: bump calendar to 0.95
	* calendar.tcl (Refresh): use correct last day, as 8.4 doesn't
	handle going over on days in month for clock scan.

2010-07-09  Andreas Kupries  <andreask@activestate.com>

	* arrowb.tcl: Added arrowbutton widgets using Keith Vetter's